tests/ui/err/wrong-level.stderr
error: unknown log level
 --> tests/ui/err/wrong-level.rs:1:1
  |
1 | #[logfn::logfn("foo")]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `logfn::logfn` (in Nightly builds, run with -Z macro-backtrace for more info)
