tests/ui/err/wrong-level.rs
#[logfn::logfn("foo")]
fn f() {}

fn main() {}
